--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Salah Eddin</title>
+    <title>Salah</title>
   </head>
   <body>
     <div id="root"></div>
