--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salah</title>
+    <script>
+window.embeddedChatbotConfig = {
+chatbotId: "fBgFrv0U-WkybjP5Pvfmt",
+domain: "www.chatbase.co"
+}
+</script>
+<script
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="fBgFrv0U-WkybjP5Pvfmt"
+domain="www.chatbase.co"
+defer>
+</script>
   </head>
   <body>
     <div id="root"></div>
