--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salah</title>
+
+
+
+
+
+
+
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2024/11/23/11/20241123114137-MIRVWVUJ.js"></script>
+    
+
+
+
+
+
+
+
+    
   </head>
   <body>
     <div id="root"></div>
