Added GHL chat widget index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
 
 
-
+<script 
+  src="https://widgets.leadconnectorhq.com/loader.js"  
+  data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js" 
+ data-widget-id="67c93cc91d6992c7df1ea650"   > 
+ </script>
 
 
 
