added form index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
     
   </head>
   <body>
+    <iframe
+  src="https://link.vortexfusionagency.com/widget/form/OZefV7GMZwgwwvwgUXSO"
+  style="width:100%;height:100%;border:none;border-radius:0px"
+  id="inline-OZefV7GMZwgwwvwgUXSO" 
+  data-layout="{'id':'INLINE'}"
+  data-trigger-type="alwaysShow"
+  data-trigger-value=""
+  data-activation-type="alwaysActivated"
+  data-activation-value=""
+  data-deactivation-type="neverDeactivate"
+  data-deactivation-value=""
+  data-form-name="Website Form "
+  data-height="428"
+  data-layout-iframe-id="inline-OZefV7GMZwgwwvwgUXSO"
+  data-form-id="OZefV7GMZwgwwvwgUXSO"
+  title="Website Form "
+      >
+</iframe>
+<script src="https://link.vortexfusionagency.com/js/form_embed.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
