--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     
   </head>
   <body>
+
+    <!--
+    THIS IS THE FROM AND THE LIVE CHAT WIDGET 
     <iframe
   src="https://link.vortexfusionagency.com/widget/form/OZefV7GMZwgwwvwgUXSO"
   style="width:100%;height:100%;border:none;border-radius:0px"
@@ -43,7 +46,7 @@
 <script src="https://link.vortexfusionagency.com/js/form_embed.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-
+ -->
 
 
 
