--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
   <body>
     <div id="root"></div>
      <script type="module" src="/src/main.tsx"></script>
+
+
+    
+    <script src="https://cdn.botpress.cloud/webchat/v2.5/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/05/21/08/20250521083711-HE2QSFGI.js"></script>
+    
   </body>
 </html>
